kubernetes/policies/image-policies.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registry
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: allow-only-ghcr
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  app: "true"
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              names:
                - "cm-acme-http-solver-*"
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: false
        message: "Images must come from ghcr.io/mario26rgl/"
        foreach:
          - list: "request.object.spec.containers"
            pattern:
              image: "ghcr.io/mario26rgl/*"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: no-latest-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  app: "true"
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              names:
                - "cm-acme-http-solver-*"
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: false
        message: "Images must not use the 'latest' tag. Use a digest or specific version tag."
        foreach:
          - list: "request.object.spec.containers"
            pattern:
              image: "?*@sha256:* | ?*:?!(latest)"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  app: "true"
      exclude:
        any:
          - resources:
              kinds:
                - Pod
              names:
                - "cm-acme-http-solver-*"
      skipBackgroundRequests: true
      verifyImages:
        - imageReferences:
            - "ghcr.io/mario26rgl/*"
          mutateDigest: true
          required: true
          useCache: true
          verifyDigest: true
          attestors:
            - entries:
                - keys:
                    signatureAlgorithm: sha256
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEDsABb+iG9uBup3dpY8ZPZkapMP4V
[...]
                      -----END PUBLIC KEY-----
                    rekor:
                      url: ""
                      ignoreTlog: true
                  signatureAlgorithm: sha256
